--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,18 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:background="@android:color/holo_blue_dark"
     tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/imageView"
-
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/diamond" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:textColor="#FFF"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:layout_width="match_parent"
         android:textSize="30sp"
         android:layout_height="wrap_content"
         android:text="@string/title" />
